<resources>
    <string name="app_name">igor</string>
    <string name="facebook_app_id">1773802782836307</string>
    <string name="fb_login_protocol_scheme">fb1773802782836307</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Criar conta</string>
    <string name="forget_password">Esquci minha senha</string>
    <string name="login_button">Login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="login_title">IGOR</string>
    <string name="or">OU</string>
    <string name="keep_logged_in">mantenha-me conectado</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="editar">Editar</string>
    <string name="ordenar">Ordenar</string>
    <string name="jogadores">Jogadores</string>
    <string name="andamento">Andamento</string>
    <string name="password">Senha</string>
    <string name="user_name">Nome de Usuário</string>
    <string name="birth_date">Data de Nascimento</string>
    <string name="sex">Sexo</string>
    <string name="create">Criar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_registration">Complete seu cadastro!</string>
    <string name="cancel">cancelar</string>
    <string name="roll_dice_message">Para realizar sua ação, você precisa tirar pelo menos:</string>
    <string name="name_it">Dê um nome para sua aventura</string>
    <string name="nome_da_aventura">Nome da aventura</string>
    <string name="pronto">Pronto</string>

    <string-array name="menu_options">
        <item>Aventuras</item>
        <item>Livros</item>
        <item>Conta</item>
        <item>Notificações</item>
        <item>Configurações</item>
        <item>Logout</item>
    </string-array>
</resources>
